Make a small fix to arrow spacing

--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -23,7 +23,7 @@
   &__container-change {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5.37px;
   }
   &__text {
     @include info-card-text;
